# Scaff-pro

./: README.md  package-lock.json
.claude/agents/manifests/: frontend-floorplan-specialist.yaml
.claude/commands/: task.md
.kamui/: model-versions-cache.json  system-graph-state.json  tasks-state.json
.kamui/manager/: 202512081541_monitor_task-1765175963744-5fabed.html  202512081552_monitor_task-1765176562657-9b4c48.html  202512081612_eval_task-1765176562657-9b4c48.html  202512081707_monitor_task-1765180980956-v7kvsf2x.html  202512081710_eval_task-1765180980956-v7kvsf2x.html  monitor_task-1765175963744-5fabed.sh  monitor_task-1765176562657-9b4c48.html  monitor_task-1765176562657-9b4c48_snapshots.log.tmp  monitor_task-1765180980956-v7kvsf2x.html  monitor_task-1765180980956-v7kvsf2x.sh  tmux_monitor_loop.sh
.kamui/prompt/: custom-prompt.txt  launch-prompt.txt
agent_docs/: agent.summary.md  directory_structure.md  floor_plan_analysis_architecture.md  requirements.md  roadmap.md  screens.md  tech_stack.md
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  drawing.py  drawing_mock.py  drawings.py
backend/app/schemas/: __init__.py  drawing.py
backend/app/services/: __init__.py  budgetcap_client.py  claude_service.py  drawing_analyzer.py  gemini_outline_extractor.py  roof_extractor.py
backend/scaff_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: UI_DESIGN_SYSTEM.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  (+1 more)
scaffold_logic/: pyproject.toml
(+29 files in other folders)
