[project]
name = "scaff-backend"
version = "0.1.0"
description = "足場SaaSツール バックエンドAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    # 図面解析用
    "opencv-python-headless>=4.8.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "ezdxf>=1.3.0",
    "pytesseract>=0.3.10",
    "aiofiles>=24.1.0",
    # AI Agent SDK
    "anthropic>=0.40.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
